# May 2025
• lava: units in lava slow down up to 5x depending on their submersion level

# April 2025
• [Pawn] 1420 -> 1650 buildtime
• [Pawn] 52m 870e -> 54m 900e
• [Grunt] 210 -> 215 range
• [Spybots] Can paralyze buildings up to 20s
• [Antinuke buildings] Health 3650 -> 3300 (facilitating a full-length stun from spybot)
• [Shuriken + Abductor] Regain targetmoveerror, revert Shuriken reloadtime 1.3s -> 1.2s

# March 2025
• [Armada solar] Buildtime 2800 -> 2600 
• [Armada wind] Metalcost 37 -> 40
• [Cortex wind] Metalcost 45 -> 43, Health 199 -> 220
• [Armada tidal] Energycost 250 -> 200
• [Armada asolar] Metalcost 370 -> 350
• [Cortex cons] +5% BP
• [Exploiter] Buildtime 2720 -> 2900
• [T2 radars] Metalcost 560 -> 400, Energycost 19000 -> 14000, Buildtime 11800 -> 8000
• [Sneaky Pete] Cloaking removed
• [Jammer ships] Costs +130%, Health +130%, Speed 61 -> 40
• [Spybots] Cloaking cost 100/50 -> 40/15, EMP immunity removed, Attack command for self-destruct added, Damage 56000 -> 5000, Paralyzetime 35/20 -> 8s
• [Banisher] Can now fire in all directions, Sightdistance 550 -> 650, Energycost 23000 -> 17000, Improved aim/tracking
• [Tremor] Damage 150 -> 200, AoE 200 -> 210, Weapon hits a wider area
• [Poison Arrow] Energycost 29000 -> 21000, Buildtime 22200 -> 19000, Sightdistance 385 -> 500
• [Turtle] Sightdistance 372 -> 500
• [Garpike/Pincer] Sightdistance 305 -> 500, Faster turning turrets
• [Hound] Lost gauss weapon switch, Metalcost 300 -> 285
• [Recluse] Range 600 -> 575, Speed 52 -> 47
• [Grunt] Metalcost 36 --> 43, Energycost 880 -> 840, Range 230 -> 210, Turnrate 1391 -> 1200
• [Tick] Metalcost 17 -> 21, Energycost 340 -> 300,  Health 61 -> 60
• [Pawn] Metalcost 48 -> 52, Energycost 960 -> 870, Health 335 -> 370
• [Rover] Health 89 -> 105 
• [Rascal] Health 75 -> 90
• [Blitz] Health 690 -> 750, Ellipsoid hitbox, Sightrange 299 -> 350
• [Incisor] Buildtime 1761 -> 2200, Sightrange 273 -> 330
• [Shuriken] Reloadtime 1.2s -> 1.3s