@@ -1,7 +1,7 @@
 return {
 	corgol = {
 		buildpic = "CORGOL.DDS",
-		buildtime = 26100,
+		buildtime = 30000,
 		canmove = true,
 		collisionvolumeoffsets = "0 -10 -1",
 		collisionvolumescales = "50 50 50",
